// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lock should have a blue lock 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Lock
    colour="blue"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <G>
        <Path
          d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 "
          fill="transparent"
          stroke="blue"
          strokeWidth={3}
          transform="matrix(1,0,0,-1,21.4999,16.1248)"
        />
        <G
          clipPath="url(#clip1)"
          clipRule="nonzero"
        >
          <Path
            d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
            fill="transparent"
            stroke="blue"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,0,35.9167)"
          />
        </G>
        <Path
          d="M 0.0001 0.00176875 C 0.0001 -0.552919 -0.449119 -0.998231 -0.9999 -0.998231 C -1.550681 -0.998231 -1.9999 -0.552919 -1.9999 0.00176875 C -1.9999 0.55255 -1.550681 1.001769 -0.9999 1.001769 C -0.449119 1.001769 0.0001 0.55255 0.0001 0.00176875 Z M 0.0001 0.00176875 "
          fill="transparent"
          stroke="blue"
          strokeWidth={3}
          transform="matrix(1,0,0,-1,14.9999,25.4588)"
        />
      </G>,
      "height": "21",
      "preserveAspectRatio": "xMidYMid meet",
      "viewBox": "0 0 28 35.9167",
      "width": "21",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Path
            d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 "
            fill="transparent"
            stroke="blue"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,21.4999,16.1248)"
          />,
          <G
            clipPath="url(#clip1)"
            clipRule="nonzero"
          >
            <Path
              d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
              fill="transparent"
              stroke="blue"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,0,35.9167)"
            />
          </G>,
          <Path
            d="M 0.0001 0.00176875 C 0.0001 -0.552919 -0.449119 -0.998231 -0.9999 -0.998231 C -1.550681 -0.998231 -1.9999 -0.552919 -1.9999 0.00176875 C -1.9999 0.55255 -1.550681 1.001769 -0.9999 1.001769 C -0.449119 1.001769 0.0001 0.55255 0.0001 0.00176875 Z M 0.0001 0.00176875 "
            fill="transparent"
            stroke="blue"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,14.9999,25.4588)"
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 ",
            "fill": "transparent",
            "stroke": "blue",
            "strokeWidth": 3,
            "transform": "matrix(1,0,0,-1,21.4999,16.1248)",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Path
              d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
              fill="transparent"
              stroke="blue"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,0,35.9167)"
            />,
            "clipPath": "url(#clip1)",
            "clipRule": "nonzero",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "d": "M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 ",
              "fill": "transparent",
              "stroke": "blue",
              "strokeWidth": 3,
              "transform": "matrix(1,0,0,-1,0,35.9167)",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M 0.0001 0.00176875 C 0.0001 -0.552919 -0.449119 -0.998231 -0.9999 -0.998231 C -1.550681 -0.998231 -1.9999 -0.552919 -1.9999 0.00176875 C -1.9999 0.55255 -1.550681 1.001769 -0.9999 1.001769 C -0.449119 1.001769 0.0001 0.55255 0.0001 0.00176875 Z M 0.0001 0.00176875 ",
            "fill": "transparent",
            "stroke": "blue",
            "strokeWidth": 3,
            "transform": "matrix(1,0,0,-1,14.9999,25.4588)",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <G>
          <Path
            d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 "
            fill="transparent"
            stroke="blue"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,21.4999,16.1248)"
          />
          <G
            clipPath="url(#clip1)"
            clipRule="nonzero"
          >
            <Path
              d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
              fill="transparent"
              stroke="blue"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,0,35.9167)"
            />
          </G>
          <Path
            d="M 0.0001 0.00176875 C 0.0001 -0.552919 -0.449119 -0.998231 -0.9999 -0.998231 C -1.550681 -0.998231 -1.9999 -0.552919 -1.9999 0.00176875 C -1.9999 0.55255 -1.550681 1.001769 -0.9999 1.001769 C -0.449119 1.001769 0.0001 0.55255 0.0001 0.00176875 Z M 0.0001 0.00176875 "
            fill="transparent"
            stroke="blue"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,14.9999,25.4588)"
          />
        </G>,
        "height": "21",
        "preserveAspectRatio": "xMidYMid meet",
        "viewBox": "0 0 28 35.9167",
        "width": "21",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Path
              d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 "
              fill="transparent"
              stroke="blue"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,21.4999,16.1248)"
            />,
            <G
              clipPath="url(#clip1)"
              clipRule="nonzero"
            >
              <Path
                d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
                fill="transparent"
                stroke="blue"
                strokeWidth={3}
                transform="matrix(1,0,0,-1,0,35.9167)"
              />
            </G>,
            <Path
              d="M 0.0001 0.00176875 C 0.0001 -0.552919 -0.449119 -0.998231 -0.9999 -0.998231 C -1.550681 -0.998231 -1.9999 -0.552919 -1.9999 0.00176875 C -1.9999 0.55255 -1.550681 1.001769 -0.9999 1.001769 C -0.449119 1.001769 0.0001 0.55255 0.0001 0.00176875 Z M 0.0001 0.00176875 "
              fill="transparent"
              stroke="blue"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,14.9999,25.4588)"
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "d": "M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 ",
              "fill": "transparent",
              "stroke": "blue",
              "strokeWidth": 3,
              "transform": "matrix(1,0,0,-1,21.4999,16.1248)",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Path
                d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
                fill="transparent"
                stroke="blue"
                strokeWidth={3}
                transform="matrix(1,0,0,-1,0,35.9167)"
              />,
              "clipPath": "url(#clip1)",
              "clipRule": "nonzero",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "d": "M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 ",
                "fill": "transparent",
                "stroke": "blue",
                "strokeWidth": 3,
                "transform": "matrix(1,0,0,-1,0,35.9167)",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "d": "M 0.0001 0.00176875 C 0.0001 -0.552919 -0.449119 -0.998231 -0.9999 -0.998231 C -1.550681 -0.998231 -1.9999 -0.552919 -1.9999 0.00176875 C -1.9999 0.55255 -1.550681 1.001769 -0.9999 1.001769 C -0.449119 1.001769 0.0001 0.55255 0.0001 0.00176875 Z M 0.0001 0.00176875 ",
              "fill": "transparent",
              "stroke": "blue",
              "strokeWidth": 3,
              "transform": "matrix(1,0,0,-1,14.9999,25.4588)",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Lock should have a larger lock 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Lock
    colour="black"
    scale={2}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <G>
        <Path
          d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 "
          fill="transparent"
          stroke="black"
          strokeWidth={3}
          transform="matrix(1,0,0,-1,21.4999,16.1248)"
        />
        <G
          clipPath="url(#clip1)"
          clipRule="nonzero"
        >
          <Path
            d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
            fill="transparent"
            stroke="black"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,0,35.9167)"
          />
        </G>
        <Path
          d="M 0.0001 0.00176875 C 0.0001 -0.552919 -0.449119 -0.998231 -0.9999 -0.998231 C -1.550681 -0.998231 -1.9999 -0.552919 -1.9999 0.00176875 C -1.9999 0.55255 -1.550681 1.001769 -0.9999 1.001769 C -0.449119 1.001769 0.0001 0.55255 0.0001 0.00176875 Z M 0.0001 0.00176875 "
          fill="transparent"
          stroke="black"
          strokeWidth={3}
          transform="matrix(1,0,0,-1,14.9999,25.4588)"
        />
      </G>,
      "height": "42",
      "preserveAspectRatio": "xMidYMid meet",
      "viewBox": "0 0 28 35.9167",
      "width": "42",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Path
            d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 "
            fill="transparent"
            stroke="black"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,21.4999,16.1248)"
          />,
          <G
            clipPath="url(#clip1)"
            clipRule="nonzero"
          >
            <Path
              d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
              fill="transparent"
              stroke="black"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,0,35.9167)"
            />
          </G>,
          <Path
            d="M 0.0001 0.00176875 C 0.0001 -0.552919 -0.449119 -0.998231 -0.9999 -0.998231 C -1.550681 -0.998231 -1.9999 -0.552919 -1.9999 0.00176875 C -1.9999 0.55255 -1.550681 1.001769 -0.9999 1.001769 C -0.449119 1.001769 0.0001 0.55255 0.0001 0.00176875 Z M 0.0001 0.00176875 "
            fill="transparent"
            stroke="black"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,14.9999,25.4588)"
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 ",
            "fill": "transparent",
            "stroke": "black",
            "strokeWidth": 3,
            "transform": "matrix(1,0,0,-1,21.4999,16.1248)",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Path
              d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
              fill="transparent"
              stroke="black"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,0,35.9167)"
            />,
            "clipPath": "url(#clip1)",
            "clipRule": "nonzero",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "d": "M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 ",
              "fill": "transparent",
              "stroke": "black",
              "strokeWidth": 3,
              "transform": "matrix(1,0,0,-1,0,35.9167)",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M 0.0001 0.00176875 C 0.0001 -0.552919 -0.449119 -0.998231 -0.9999 -0.998231 C -1.550681 -0.998231 -1.9999 -0.552919 -1.9999 0.00176875 C -1.9999 0.55255 -1.550681 1.001769 -0.9999 1.001769 C -0.449119 1.001769 0.0001 0.55255 0.0001 0.00176875 Z M 0.0001 0.00176875 ",
            "fill": "transparent",
            "stroke": "black",
            "strokeWidth": 3,
            "transform": "matrix(1,0,0,-1,14.9999,25.4588)",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <G>
          <Path
            d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 "
            fill="transparent"
            stroke="black"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,21.4999,16.1248)"
          />
          <G
            clipPath="url(#clip1)"
            clipRule="nonzero"
          >
            <Path
              d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
              fill="transparent"
              stroke="black"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,0,35.9167)"
            />
          </G>
          <Path
            d="M 0.0001 0.00176875 C 0.0001 -0.552919 -0.449119 -0.998231 -0.9999 -0.998231 C -1.550681 -0.998231 -1.9999 -0.552919 -1.9999 0.00176875 C -1.9999 0.55255 -1.550681 1.001769 -0.9999 1.001769 C -0.449119 1.001769 0.0001 0.55255 0.0001 0.00176875 Z M 0.0001 0.00176875 "
            fill="transparent"
            stroke="black"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,14.9999,25.4588)"
          />
        </G>,
        "height": "42",
        "preserveAspectRatio": "xMidYMid meet",
        "viewBox": "0 0 28 35.9167",
        "width": "42",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Path
              d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 "
              fill="transparent"
              stroke="black"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,21.4999,16.1248)"
            />,
            <G
              clipPath="url(#clip1)"
              clipRule="nonzero"
            >
              <Path
                d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
                fill="transparent"
                stroke="black"
                strokeWidth={3}
                transform="matrix(1,0,0,-1,0,35.9167)"
              />
            </G>,
            <Path
              d="M 0.0001 0.00176875 C 0.0001 -0.552919 -0.449119 -0.998231 -0.9999 -0.998231 C -1.550681 -0.998231 -1.9999 -0.552919 -1.9999 0.00176875 C -1.9999 0.55255 -1.550681 1.001769 -0.9999 1.001769 C -0.449119 1.001769 0.0001 0.55255 0.0001 0.00176875 Z M 0.0001 0.00176875 "
              fill="transparent"
              stroke="black"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,14.9999,25.4588)"
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "d": "M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 ",
              "fill": "transparent",
              "stroke": "black",
              "strokeWidth": 3,
              "transform": "matrix(1,0,0,-1,21.4999,16.1248)",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Path
                d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
                fill="transparent"
                stroke="black"
                strokeWidth={3}
                transform="matrix(1,0,0,-1,0,35.9167)"
              />,
              "clipPath": "url(#clip1)",
              "clipRule": "nonzero",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "d": "M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 ",
                "fill": "transparent",
                "stroke": "black",
                "strokeWidth": 3,
                "transform": "matrix(1,0,0,-1,0,35.9167)",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "d": "M 0.0001 0.00176875 C 0.0001 -0.552919 -0.449119 -0.998231 -0.9999 -0.998231 C -1.550681 -0.998231 -1.9999 -0.552919 -1.9999 0.00176875 C -1.9999 0.55255 -1.550681 1.001769 -0.9999 1.001769 C -0.449119 1.001769 0.0001 0.55255 0.0001 0.00176875 Z M 0.0001 0.00176875 ",
              "fill": "transparent",
              "stroke": "black",
              "strokeWidth": 3,
              "transform": "matrix(1,0,0,-1,14.9999,25.4588)",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Lock should render 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Lock
    colour="black"
    scale={1}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <G>
        <Path
          d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 "
          fill="transparent"
          stroke="black"
          strokeWidth={3}
          transform="matrix(1,0,0,-1,21.4999,16.1248)"
        />
        <G
          clipPath="url(#clip1)"
          clipRule="nonzero"
        >
          <Path
            d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
            fill="transparent"
            stroke="black"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,0,35.9167)"
          />
        </G>
        <Path
          d="M 0.0001 0.00176875 C 0.0001 -0.552919 -0.449119 -0.998231 -0.9999 -0.998231 C -1.550681 -0.998231 -1.9999 -0.552919 -1.9999 0.00176875 C -1.9999 0.55255 -1.550681 1.001769 -0.9999 1.001769 C -0.449119 1.001769 0.0001 0.55255 0.0001 0.00176875 Z M 0.0001 0.00176875 "
          fill="transparent"
          stroke="black"
          strokeWidth={3}
          transform="matrix(1,0,0,-1,14.9999,25.4588)"
        />
      </G>,
      "height": "21",
      "preserveAspectRatio": "xMidYMid meet",
      "viewBox": "0 0 28 35.9167",
      "width": "21",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Path
            d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 "
            fill="transparent"
            stroke="black"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,21.4999,16.1248)"
          />,
          <G
            clipPath="url(#clip1)"
            clipRule="nonzero"
          >
            <Path
              d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
              fill="transparent"
              stroke="black"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,0,35.9167)"
            />
          </G>,
          <Path
            d="M 0.0001 0.00176875 C 0.0001 -0.552919 -0.449119 -0.998231 -0.9999 -0.998231 C -1.550681 -0.998231 -1.9999 -0.552919 -1.9999 0.00176875 C -1.9999 0.55255 -1.550681 1.001769 -0.9999 1.001769 C -0.449119 1.001769 0.0001 0.55255 0.0001 0.00176875 Z M 0.0001 0.00176875 "
            fill="transparent"
            stroke="black"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,14.9999,25.4588)"
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 ",
            "fill": "transparent",
            "stroke": "black",
            "strokeWidth": 3,
            "transform": "matrix(1,0,0,-1,21.4999,16.1248)",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Path
              d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
              fill="transparent"
              stroke="black"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,0,35.9167)"
            />,
            "clipPath": "url(#clip1)",
            "clipRule": "nonzero",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "d": "M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 ",
              "fill": "transparent",
              "stroke": "black",
              "strokeWidth": 3,
              "transform": "matrix(1,0,0,-1,0,35.9167)",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M 0.0001 0.00176875 C 0.0001 -0.552919 -0.449119 -0.998231 -0.9999 -0.998231 C -1.550681 -0.998231 -1.9999 -0.552919 -1.9999 0.00176875 C -1.9999 0.55255 -1.550681 1.001769 -0.9999 1.001769 C -0.449119 1.001769 0.0001 0.55255 0.0001 0.00176875 Z M 0.0001 0.00176875 ",
            "fill": "transparent",
            "stroke": "black",
            "strokeWidth": 3,
            "transform": "matrix(1,0,0,-1,14.9999,25.4588)",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <G>
          <Path
            d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 "
            fill="transparent"
            stroke="black"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,21.4999,16.1248)"
          />
          <G
            clipPath="url(#clip1)"
            clipRule="nonzero"
          >
            <Path
              d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
              fill="transparent"
              stroke="black"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,0,35.9167)"
            />
          </G>
          <Path
            d="M 0.0001 0.00176875 C 0.0001 -0.552919 -0.449119 -0.998231 -0.9999 -0.998231 C -1.550681 -0.998231 -1.9999 -0.552919 -1.9999 0.00176875 C -1.9999 0.55255 -1.550681 1.001769 -0.9999 1.001769 C -0.449119 1.001769 0.0001 0.55255 0.0001 0.00176875 Z M 0.0001 0.00176875 "
            fill="transparent"
            stroke="black"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,14.9999,25.4588)"
          />
        </G>,
        "height": "21",
        "preserveAspectRatio": "xMidYMid meet",
        "viewBox": "0 0 28 35.9167",
        "width": "21",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Path
              d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 "
              fill="transparent"
              stroke="black"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,21.4999,16.1248)"
            />,
            <G
              clipPath="url(#clip1)"
              clipRule="nonzero"
            >
              <Path
                d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
                fill="transparent"
                stroke="black"
                strokeWidth={3}
                transform="matrix(1,0,0,-1,0,35.9167)"
              />
            </G>,
            <Path
              d="M 0.0001 0.00176875 C 0.0001 -0.552919 -0.449119 -0.998231 -0.9999 -0.998231 C -1.550681 -0.998231 -1.9999 -0.552919 -1.9999 0.00176875 C -1.9999 0.55255 -1.550681 1.001769 -0.9999 1.001769 C -0.449119 1.001769 0.0001 0.55255 0.0001 0.00176875 Z M 0.0001 0.00176875 "
              fill="transparent"
              stroke="black"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,14.9999,25.4588)"
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "d": "M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 ",
              "fill": "transparent",
              "stroke": "black",
              "strokeWidth": 3,
              "transform": "matrix(1,0,0,-1,21.4999,16.1248)",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Path
                d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
                fill="transparent"
                stroke="black"
                strokeWidth={3}
                transform="matrix(1,0,0,-1,0,35.9167)"
              />,
              "clipPath": "url(#clip1)",
              "clipRule": "nonzero",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "d": "M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 ",
                "fill": "transparent",
                "stroke": "black",
                "strokeWidth": 3,
                "transform": "matrix(1,0,0,-1,0,35.9167)",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "d": "M 0.0001 0.00176875 C 0.0001 -0.552919 -0.449119 -0.998231 -0.9999 -0.998231 C -1.550681 -0.998231 -1.9999 -0.552919 -1.9999 0.00176875 C -1.9999 0.55255 -1.550681 1.001769 -0.9999 1.001769 C -0.449119 1.001769 0.0001 0.55255 0.0001 0.00176875 Z M 0.0001 0.00176875 ",
              "fill": "transparent",
              "stroke": "black",
              "strokeWidth": 3,
              "transform": "matrix(1,0,0,-1,14.9999,25.4588)",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Lock should render but not see a lock 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Lock
    scale={0}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <G>
        <Path
          d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 "
          fill="transparent"
          stroke="rgb(204,204,204)"
          strokeWidth={3}
          transform="matrix(1,0,0,-1,21.4999,16.1248)"
        />
        <G
          clipPath="url(#clip1)"
          clipRule="nonzero"
        >
          <Path
            d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
            fill="transparent"
            stroke="rgb(204,204,204)"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,0,35.9167)"
          />
        </G>
        <Path
          d="M 0.0001 0.00176875 C 0.0001 -0.552919 -0.449119 -0.998231 -0.9999 -0.998231 C -1.550681 -0.998231 -1.9999 -0.552919 -1.9999 0.00176875 C -1.9999 0.55255 -1.550681 1.001769 -0.9999 1.001769 C -0.449119 1.001769 0.0001 0.55255 0.0001 0.00176875 Z M 0.0001 0.00176875 "
          fill="transparent"
          stroke="rgb(204,204,204)"
          strokeWidth={3}
          transform="matrix(1,0,0,-1,14.9999,25.4588)"
        />
      </G>,
      "height": "0",
      "preserveAspectRatio": "xMidYMid meet",
      "viewBox": "0 0 28 35.9167",
      "width": "0",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Path
            d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 "
            fill="transparent"
            stroke="rgb(204,204,204)"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,21.4999,16.1248)"
          />,
          <G
            clipPath="url(#clip1)"
            clipRule="nonzero"
          >
            <Path
              d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
              fill="transparent"
              stroke="rgb(204,204,204)"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,0,35.9167)"
            />
          </G>,
          <Path
            d="M 0.0001 0.00176875 C 0.0001 -0.552919 -0.449119 -0.998231 -0.9999 -0.998231 C -1.550681 -0.998231 -1.9999 -0.552919 -1.9999 0.00176875 C -1.9999 0.55255 -1.550681 1.001769 -0.9999 1.001769 C -0.449119 1.001769 0.0001 0.55255 0.0001 0.00176875 Z M 0.0001 0.00176875 "
            fill="transparent"
            stroke="rgb(204,204,204)"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,14.9999,25.4588)"
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 ",
            "fill": "transparent",
            "stroke": "rgb(204,204,204)",
            "strokeWidth": 3,
            "transform": "matrix(1,0,0,-1,21.4999,16.1248)",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Path
              d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
              fill="transparent"
              stroke="rgb(204,204,204)"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,0,35.9167)"
            />,
            "clipPath": "url(#clip1)",
            "clipRule": "nonzero",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "d": "M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 ",
              "fill": "transparent",
              "stroke": "rgb(204,204,204)",
              "strokeWidth": 3,
              "transform": "matrix(1,0,0,-1,0,35.9167)",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M 0.0001 0.00176875 C 0.0001 -0.552919 -0.449119 -0.998231 -0.9999 -0.998231 C -1.550681 -0.998231 -1.9999 -0.552919 -1.9999 0.00176875 C -1.9999 0.55255 -1.550681 1.001769 -0.9999 1.001769 C -0.449119 1.001769 0.0001 0.55255 0.0001 0.00176875 Z M 0.0001 0.00176875 ",
            "fill": "transparent",
            "stroke": "rgb(204,204,204)",
            "strokeWidth": 3,
            "transform": "matrix(1,0,0,-1,14.9999,25.4588)",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <G>
          <Path
            d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 "
            fill="transparent"
            stroke="rgb(204,204,204)"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,21.4999,16.1248)"
          />
          <G
            clipPath="url(#clip1)"
            clipRule="nonzero"
          >
            <Path
              d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
              fill="transparent"
              stroke="rgb(204,204,204)"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,0,35.9167)"
            />
          </G>
          <Path
            d="M 0.0001 0.00176875 C 0.0001 -0.552919 -0.449119 -0.998231 -0.9999 -0.998231 C -1.550681 -0.998231 -1.9999 -0.552919 -1.9999 0.00176875 C -1.9999 0.55255 -1.550681 1.001769 -0.9999 1.001769 C -0.449119 1.001769 0.0001 0.55255 0.0001 0.00176875 Z M 0.0001 0.00176875 "
            fill="transparent"
            stroke="rgb(204,204,204)"
            strokeWidth={3}
            transform="matrix(1,0,0,-1,14.9999,25.4588)"
          />
        </G>,
        "height": "0",
        "preserveAspectRatio": "xMidYMid meet",
        "viewBox": "0 0 28 35.9167",
        "width": "0",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Path
              d="M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 "
              fill="transparent"
              stroke="rgb(204,204,204)"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,21.4999,16.1248)"
            />,
            <G
              clipPath="url(#clip1)"
              clipRule="nonzero"
            >
              <Path
                d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
                fill="transparent"
                stroke="rgb(204,204,204)"
                strokeWidth={3}
                transform="matrix(1,0,0,-1,0,35.9167)"
              />
            </G>,
            <Path
              d="M 0.0001 0.00176875 C 0.0001 -0.552919 -0.449119 -0.998231 -0.9999 -0.998231 C -1.550681 -0.998231 -1.9999 -0.552919 -1.9999 0.00176875 C -1.9999 0.55255 -1.550681 1.001769 -0.9999 1.001769 C -0.449119 1.001769 0.0001 0.55255 0.0001 0.00176875 Z M 0.0001 0.00176875 "
              fill="transparent"
              stroke="rgb(204,204,204)"
              strokeWidth={3}
              transform="matrix(1,0,0,-1,14.9999,25.4588)"
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "d": "M 0.0001 -0.0002 L 0.0001 7.1248 C 0.0001 11.265425 -3.359275 14.6248 -7.4999 14.6248 C -11.640525 14.6248 -14.9999 11.265425 -14.9999 7.1248 L -14.9999 -0.0002 ",
              "fill": "transparent",
              "stroke": "rgb(204,204,204)",
              "strokeWidth": 3,
              "transform": "matrix(1,0,0,-1,21.4999,16.1248)",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Path
                d="M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 "
                fill="transparent"
                stroke="rgb(204,204,204)"
                strokeWidth={3}
                transform="matrix(1,0,0,-1,0,35.9167)"
              />,
              "clipPath": "url(#clip1)",
              "clipRule": "nonzero",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "d": "M 26.5 1.498731 L 1.5 1.498731 L 1.5 19.4167 L 26.5 19.4167 Z M 26.5 1.498731 ",
                "fill": "transparent",
                "stroke": "rgb(204,204,204)",
                "strokeWidth": 3,
                "transform": "matrix(1,0,0,-1,0,35.9167)",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "d": "M 0.0001 0.00176875 C 0.0001 -0.552919 -0.449119 -0.998231 -0.9999 -0.998231 C -1.550681 -0.998231 -1.9999 -0.552919 -1.9999 0.00176875 C -1.9999 0.55255 -1.550681 1.001769 -0.9999 1.001769 C -0.449119 1.001769 0.0001 0.55255 0.0001 0.00176875 Z M 0.0001 0.00176875 ",
              "fill": "transparent",
              "stroke": "rgb(204,204,204)",
              "strokeWidth": 3,
              "transform": "matrix(1,0,0,-1,14.9999,25.4588)",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
